half of homepage for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="A blog about travel destinations, tips, photos and videos, built with React. Responsive, mobile first. Based on https://www.bandoftravellers.com/ with learning purposes."
   />
   <meta name="author" content="Diego Luiz">
-  <title>Travel Blog - Destinations, tips, photos and videos</title>
+  <title>Travel Blog - Destinations, tips in general, photo and video tips</title>
 </head>
 <body>
   <div id="app"></div>
