skeleton loader added, just images to open graph missing in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta
       name="description"
-      content="A blog about travel destinations, tips, photos and videos, built with React. Responsive, mobile first. Based on https://www.bandoftravellers.com/ with learning purposes."
+      content="A blog about travel destinations, tips, photos and videos, built with React, HTML, CSS and Javascript. Responsive, mobile first. Based on https://www.bandoftravellers.com/ with learning purposes."
+  />
+  <meta 
+    name="keywords"
+    content="blog, react, front-end, frontend, responsive, mobile first, html, css, javascript, js, web developer"
   />
   <meta name="author" content="Diego Luiz">
-  <title>Travel Blog - Destinations, tips in general, photo and video tips</title>
+  <title>Travel Blog - React front-end project, responsive, mobile first</title>
+  <meta property="og:title" content="Travel blog - React project">
+  <meta property="og:site_name" content="Travellers Club">
+  <meta property="og:type" content="website">
+  <!-- <meta property="og:url" content=""> -->
+  <!-- <meta property="og:image" content="https://iili.io/YkYrga.jpg">
+  <meta property="og:image:width" content="180">
+  <meta property="og:image:height" content="110"> -->
+  <!-- <meta property="og:image" content="https://iili.io/Yka9dG.md.jpg">
+  <meta property="og:image:width" content="600">
+  <meta property="og:image:height" content="314"> -->
+  <meta property="og:description" content="A blog about travel destinations, tips, photos and videos, built with React, HTML, CSS and Javascript. Responsive, mobile first.">
 </head>
 <body>
   <div id="app"></div>
