--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,9 @@
   <meta property="og:site_name" content="Travellers Club">
   <meta property="og:type" content="website">
   <!-- <meta property="og:url" content=""> -->
-  <!-- <meta property="og:image" content="https://iili.io/YkYrga.jpg">
-  <meta property="og:image:width" content="180">
-  <meta property="og:image:height" content="110"> -->
-  <!-- <meta property="og:image" content="https://iili.io/Yka9dG.md.jpg">
+  <meta property="og:image" content="https://iili.io/h663Pa.md.jpg">
   <meta property="og:image:width" content="600">
-  <meta property="og:image:height" content="314"> -->
+  <meta property="og:image:height" content="314">
   <meta property="og:description" content="A blog about travel destinations, tips, photos and videos, built with React, HTML, CSS and Javascript. Responsive, mobile first.">
 </head>
 <body>
