website description modified

--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta
       name="description"
-      content="A blog about travel destinations, tips, photos and videos, built with React, HTML, CSS and Javascript. Responsive, mobile first. Based on https://www.bandoftravellers.com/ with learning purposes."
+      content="A blog about travel destinations, tips, photos and videos. Travellers Club is a single page application built with React, HTML, CSS and Javascript. Responsive, mobile first. Based on https://www.bandoftravellers.com/ with learning purposes."
   />
   <meta 
     name="keywords"
-    content="blog, react, front-end, frontend, responsive, mobile first, html, css, javascript, js, web developer"
+    content="blog, react, single page application, spa, front-end, frontend, responsive, mobile first, html, css, javascript, js, web developer"
   />
   <meta name="author" content="Diego Luiz">
   <title>Travel Blog - React front-end project, responsive, mobile first</title>
   <meta property="og:title" content="Travel blog - React project">
   <meta property="og:site_name" content="Travellers Club">
   <meta property="og:type" content="website">
-  <!-- <meta property="og:url" content=""> -->
+  <meta property="og:url" content="https://react-trav3l-blog.netlify.app/">
   <meta property="og:image" content="https://iili.io/h663Pa.md.jpg">
   <meta property="og:image:width" content="600">
   <meta property="og:image:height" content="314">
-  <meta property="og:description" content="A blog about travel destinations, tips, photos and videos, built with React, HTML, CSS and Javascript. Responsive, mobile first.">
+  <meta property="og:description" content="A blog about travel destinations, tips, photos and videos. Travellers Club is a single page application built with React, HTML, CSS and Javascript. Responsive, mobile first.">
 </head>
 <body>
   <div id="app"></div>
